Hide x overflow and fix min width

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  overflow-x: hidden;
+  min-width: 435px;
 }
 
 code {
